--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  - RAILS_ENV=test
+before_install: gem install bundler -v 1.10.6
 language: ruby
 rvm:
   - 2.2.3
@@ -5,3 +8,5 @@ rvm:
   - 2.1.7
   - 2.1.6
   - 2.0.0
+before_script:
+  - bin/dummy_rake db:create db:migrate
